--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -66,3 +66,48 @@ ion-icon {
 .title {
   text-align: center;
 }
+ion-col.md.hydrated {
+  text-align: center;
+}
+.quran {
+  background: #ec6607;
+  border: 1px solid #ec6607!important;
+  columns: #000000!important;
+}
+.ayongaji {
+  background: #4fc6db;
+  border: 1px solid #4fc6db!important;
+  columns: #000000!important;
+}
+
+.waktu-sholat {
+  background: #e73968;
+  border: 1px solid #e73968!important;
+  columns: #000000!important;
+}
+.arah-kiblat {
+  background: #656565;
+  border: 1px solid #656565!important;
+  columns: #000000!important;
+}
+.dzikir {
+  background: #656565;
+  border: 1px solid #656565!important;
+  columns: #000000!important;
+}
+.doa {
+  background: #e73968;
+  border: 1px solid #e73968!important;
+  columns: #000000!important;
+}
+.hadist {
+  background: #ec6607;
+  border: 1px solid #ec6607!important;
+  columns: #000000!important;
+}
+
+.lainnya {
+  background: #4fc6db;
+  border: 1px solid #4fc6db!important;
+  columns: #000000!important;
+}
